<resources>
    <string name="app_name">nsi-prospect</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="lastname">Lastname</string>
    <string name="add_prospect">Add prospect</string>
    <string name="siret">Siret</string>
    <string name="phone">Phone</string>
    <string name="mail">Mail</string>
    <string name="notes">Notes</string>
    <string name="udpate_prospect">Update prospect</string>
    <string name="recover_password">Recover Password</string>
    <string name="lost_account">Lost account</string>
    <string name="title_activity_app_settings">AppSettingsActivity</string>
    <string name="title_activity_account_settings">AccountSettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="recover_account">Recover account</string>

    <string name="title_activity_main">MainActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="app_settings">App Settings</string>
    <string name="synchronisation_interval">Synchronisation Interval:</string>
    <string name="lost_acc_msg">Write your message</string>
    <string name="get_login">Get login</string>
    <string name="login">Login</string>
    <string name="change_password">Change password</string>
    <string name="new_password">New password</string>
    <string name="new_password_confirm">Confirm new password</string>
</resources>