<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BG"
    tools:context=".activities.AddProspectActivity">


    <ImageView
        android:id="@+id/useLogo"
        android:layout_width="46dp"
        android:layout_height="43dp"
        android:layout_marginStart="182dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="183dp"
        android:src="@drawable/ic_network"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/app_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="340dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_mdi_light_dots_vertical" />

    <ImageView
        android:id="@+id/sync"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="82dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="301dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_sync" />

    <ImageView
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="347dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_mdi_light_logout" />

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/spinner_company"
        android:layout_width="338dp"
        android:layout_height="48dp"
        android:layout_marginTop="104dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:ms_arrow_tint="#AEAEAE"
        app:ms_background_color="#373941"
        app:ms_text_color="@color/white" />


    <ImageView
        android:id="@+id/bg_navbar"
        android:layout_width="338dp"
        android:layout_height="66dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_nav_background" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/search"
        app:layout_constraintStart_toStartOf="@+id/bg_navbar"
        app:layout_constraintTop_toTopOf="@+id/bg_navbar"
        app:srcCompat="@drawable/ic_mdi_light_back" />

    <ImageView
        android:id="@+id/search"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/bg_navbar"
        app:layout_constraintEnd_toEndOf="@+id/bg_navbar"
        app:layout_constraintStart_toStartOf="@+id/bg_navbar"
        app:layout_constraintTop_toTopOf="@+id/bg_navbar"
        app:srcCompat="@drawable/ic_globe_search_regular" />

    <ImageView
        android:id="@+id/btn_add_newProspect"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bg_navbar"
        app:layout_constraintStart_toEndOf="@+id/search"
        app:layout_constraintTop_toTopOf="@+id/bg_navbar"
        app:srcCompat="@drawable/ic_mdi_light_plus_box" />

    <EditText
        android:id="@+id/number_siret"
        android:layout_width="338dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/siret"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_company" />

    <EditText
        android:id="@+id/text_name"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toEndOf="@+id/text_lastname"
        app:layout_constraintTop_toBottomOf="@+id/number_siret" />

    <EditText
        android:id="@+id/text_lastname"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/lastname"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_siret" />

    <EditText
        android:id="@+id/phone_phone"
        android:layout_width="338dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_lastname" />

    <EditText
        android:id="@+id/mail_mail"
        android:layout_width="338dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_phone" />

    <EditText
        android:id="@+id/mlText_notes"
        android:layout_width="338dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/notes"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail_mail" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="338dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/add_prospect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mlText_notes" />

</androidx.constraintlayout.widget.ConstraintLayout>